--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -555,27 +555,26 @@ $icon-font-path: '../fonts/';
   //-------------------------------------
   // section-story-type
   //-------------------------------------
-  #section-story-type {
-    @extend %section;
+  #section-story-type-flex {
+    margin: 1em;
   }
 
   #section-story-type-child {
-    @extend %section-child;
     text-align: center;
 
-    #section-story-type-header {
+    .section-story-type-header {
       max-width: 64em;
       margin: auto;
       h1 {
-        font-size: 38px;
+        font-size: 32px;
         line-height: 110%;
         font-weight: 500;
         margin: 0em 0em;
       }
 
       .main {
-        line-height: 2.5em;
-        margin: 2em 0em 3em;
+        line-height: 2.0em;
+        margin: 1em 0em 0em;
         font-size: 14px;
       }
     }
@@ -589,19 +588,20 @@ $icon-font-path: '../fonts/';
 
       .story-type {
         flex: 1;
-        margin: 2em;
+        margin: 1.5em;
         max-height: 12em;
         max-width: 12em;
-        height: 12em;
+        height: 3em;
         a {
           color: white;
         }
         img {
-          height: 75%;
+          height: 100%;
+          height: 30px;
         }
         span {
           display: block;
-          font-size: 22px;
+          font-size: 14px;
         }
       }
     }
